additional layout and fixes doc layout bug

--- a/themes/bitcore/source/css/_partial/index.styl
+++ b/themes/bitcore/source/css/_partial/index.styl
@@ -919,6 +919,10 @@ backgound-color: green
 
 // Bitcore node additions
 
+.sub-header
+  margin: 1em 0
+
+
 
 .button-primary
   display: inline-block
@@ -991,6 +995,17 @@ backgound-color: green
   line-height: 27px
   font-family: 'Ubuntu'
 
+.subsection
+  padding: 2em 0
+
+.subsection-title
+  font-family: 'Ubuntu'
+  margin-bottom: 1em
+  color: #3A3A3A
+
+.subsection-description
+  font-weight: 100
+  color: #3A3A3A
 
 .background-element
   background-image: url("images/icosahedron_spheres.png")
@@ -1001,7 +1016,7 @@ backgound-color: green
   display: block
   left: 0
   right: 0
-  height: 400px
+  height: 430px
   background-position: center bottom
   background-repeat: no-repeat
   background-size: contain
@@ -1011,9 +1026,13 @@ backgound-color: green
   @media mq-mobile
     padding: 1em!important
 
+.round
+  border-radius: 50px!imporant
+
 .primary
   background: #F7F7F7!important
   color: #3A3A3A!important
+
 
 .secondary
   background: #3A3A3A!important
